# boano-api

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  team_history.json  team_state.json
.github/workflows/: docker-publish.yml
app/agents/: chat_manager.py
app/api/v1/: __init__.py  autogen.py
app/models/: chat.py
src/: .env.example
src/app/: main.py
src/app/ai/agents/: calender.py  chat_manager.py  github.py
src/app/ai/teams/: time_log.py
src/app/ai/toolkits/github/: toolkit.py
src/app/ai/tools/: prompt.py  tool.py
src/app/api/: dependencies.py  websocket_manager.py
src/app/api/v1/: __init__.py  autogen.py  plugins.py  time_log.py  users.py  webhook.py
src/app/core/: config.py  schemas.py  security.py  setup.py
src/app/core/db/: database.py
src/app/core/plugins/: __init__.py  github.py
src/app/core/utils/: cache.py
src/app/core/worker/: settings.py
src/app/crud/: crud_plugin_token.py  crud_timelog.py  crud_users.py
src/app/models/: __init__.py  plugin_token.py  post.py  tier.py  timelog.py  user.py
src/migrations/: env.py
src/migrations/versions/: 016ee7d6b0b9_remove_unique_contrainta.py  064109a8e052_make_id_uuid.py  075f641caa2e_make_uuid_string.py  29466908bf3e_fix_created_at_timeone_issues.py  33cfec9c9fc5_drop_post_table.py  36953a014b97_drop_post_table.py  3ecb4e9492d0_modify_datetime_column.py  40be74e6375e_remove_tier_field_from_user.py  4498a252d507_remove_all_uuid_tables.py  4a8e7d2da15d_make_id_uuid_with_default_uuid_package.py  569174511974_create_tables.py  5b0c04db4041_.py  5c0e43231c13_ensure_user_id_is_unique.py  605f88e55e7a_drop_post_table.py  61fcea1dca3b_make_email_and_uuid_unique.py  623ef1e66179_make_id_uuid.py  62ca78ccb76f_autogenerate_id.py  656df8b99e6a_drop_timelog_table.py  75bcf320385f_user_unique_id.py  8b8e624d3a28_drop_post_table.py  8d817d8cad7b_timelog_table.py  a537e639c8a5_use_sqlachemy_timezone.py  b7ec49f8797d_make_user_id_a_string.py  bc5a0c3f51d6_initial_tables.py  bca954b13aff_change_updated_at_lamda_type.py  bd840a3fc487_remove_password_field.py  c0b46f3a0fc3_post_table.py  d04e0ac2b737_make_id_user_table_primary_key.py
src/scripts/: create_first_superuser.py
