[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "A fully Async FastAPI boilerplate using SQLAlchemy and Pydantic 2"
authors = ["Igor Magalhaes <igor.magalhaes.r@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

#[tool.poetry.requires-plugins]
#poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
python-dotenv = "1.0.1"
pydantic = "2.10.6"
fastapi = "0.109.2"
uvicorn = "0.27.1"
uvloop = "0.19.0"
httptools = "0.6.4"
uuid = "1.30"
alembic = "1.14.1"
asyncpg = "0.29.0"
SQLAlchemy-Utils = "^0.41.1"
python-jose = "3.3.0"
SQLAlchemy = "^2.0.25"
pytest = "7.4.4"
python-multipart = "0.0.9"
greenlet = "^3.1.1"
httpx = ">=0.28.1"
pydantic-settings = "2.7.1"
redis = "5.2.1"
arq = "0.25.0"
gunicorn = "22.0.0"
bcrypt = "4.2.1"
fastcrud = "0.12.1"
sqlmodel = "^0.0.18"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.6"
aiohttp = "3.11.12"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anyio = "4.8.0"
appnope = "0.1.4"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "3.0.0"
async-lru = "2.0.4"
async-timeout = "5.0.1"
asyncer = "0.0.8"
attrs = "25.1.0"
autogen-agentchat = "^0.4.7"
autogen-core = "0.4.7"
autogen-ext = "0.4.7"
azure-ai-inference = "1.0.0b9"
azure-core = "1.32.0"
azure-identity = "1.20.0"
babel = "2.17.0"
beautifulsoup4 = "4.13.3"
bleach = "6.2.0"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
comm = "0.2.2"
cryptography = ">=43.0.1,<44.0.0"
dataclasses-json = "0.6.7"
debugpy = "1.8.12"
decorator = "5.1.1"
defusedxml = "0.7.1"
deprecated = "1.2.18"
diskcache = "5.6.3"
distro = "1.9.0"
dnspython = "2.7.0"
docker = "7.1.0"
ecdsa = "0.19.0"
email-validator = "2.2.0"
executing = "2.2.0"
fast-depends = "2.4.12"
fastjsonschema = "2.21.1"
fqdn = "1.5.1"
frozenlist = "1.5.0"
gitdb = "4.0.12"
gitpython = "3.1.44"
h11 = "0.14.0"
hiredis = "3.1.0"
httpcore = "1.0.7"
httpx-sse = "0.4.0"
idna = "3.10"
importlib-metadata = "8.5.0"
iniconfig = "2.0.0"
ipykernel = "6.29.5"
ipython = "8.32.0"
isodate = "0.7.2"
isoduration = "20.11.0"
jedi = "0.19.2"
jinja2 = "3.1.5"
jiter = "0.8.2"
json5 = "0.10.0"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonref = "1.1.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
jupyter-events = "0.12.0"
jupyter-lsp = "2.2.5"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
jupyter-server = "2.15.0"
jupyter-server-terminals = "0.5.3"
jupyterlab = "4.3.5"
jupyterlab-pygments = "0.3.0"
jupyterlab-server = "2.27.3"
langchain = "0.3.18"
langchain-community = "0.3.17"
langchain-core = "0.3.35"
langchain-text-splitters = "0.3.6"
langsmith = "0.3.8"
lizard = "1.17.19"
mako = "1.3.9"
markupsafe = "3.0.2"
marshmallow = "3.26.1"
matplotlib-inline = "0.1.7"
mistune = "3.1.1"
msal = "1.31.1"
msal-extensions = "1.2.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
nbclient = "0.10.2"
nbconvert = "7.16.6"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
notebook = "7.3.2"
notebook-shim = "0.2.4"
numpy = "1.26.4"
openai = "1.62.0"
opentelemetry-api = "1.30.0"
orjson = "3.10.15"
overrides = "7.7.0"
packaging = "24.2"
pandocfilters = "1.5.1"
parso = "0.8.4"
pathspec = "0.12.1"
pexpect = "4.9.0"
pillow = "11.1.0"
platformdirs = "4.3.6"
pluggy = "1.5.0"
portalocker = "2.10.1"
prometheus-client = "0.21.1"
prompt-toolkit = "3.0.50"
propcache = "0.2.1"
protobuf = "5.29.3"
psutil = "7.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pyasn1 = "0.6.1"
pycparser = "2.22"
pydantic-core = "2.27.2"
pydriller = "2.7"
pygithub = "2.5.0"
pygments = "2.19.1"
pyjwt = "2.10.1"
pynacl = "1.5.0"
python-dateutil = "2.9.0.post0"
python-json-logger = "3.2.1"
pytz = "2025.1"
pyyaml = "6.0.2"
pyzmq = "26.2.1"
referencing = "0.36.2"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rpds-py = "0.22.3"
send2trash = "1.8.3"
smmap = "5.0.2"
soupsieve = "2.6"
stack-data = "0.6.3"
starlette = "0.36.3"
tenacity = "9.0.0"
termcolor = "2.5.0"
terminado = "0.18.1"
tiktoken = "0.8.0"
tinycss2 = "1.4.0"
tornado = "6.4.2"
tqdm = "4.67.1"
traitlets = "5.14.3"
types-python-dateutil = "2.9.0.20241206"
types-pytz = "2025.1.0.20250204"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
uri-template = "1.3.0"
urllib3 = "2.3.0"
wcwidth = "0.2.13"
webcolors = "24.11.1"
webencodings = "0.5.1"
websocket-client = "1.8.0"
websockets = "14.2"
wrapt = "1.17.2"
yarl = "1.18.3"
zipp = "3.21.0"
zstandard = "0.23.0"
autogen = "^0.7.4"
clerk-backend-api = "^1.8.0"
svix = "^1.59.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F", # Pyflakes
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E", # pycodestyle
    "W", # Warning
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C", # Complexity (mccabe+) & comprehensions
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP", # pyupgrade
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I", # isort
]
ignore = [
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E402", # module level import not at top of file
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP006", # use-pep585-annotation
    "UP007", # use-pep604-annotation
    "E741",  # Ambiguous variable name
    # "UP035", # deprecated-assertion
]
[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # unused import
    "F403", # star imports
]

[tool.ruff.mccabe]
max-complexity = 24

[tool.ruff.pydocstyle]
convention = "numpy"
